--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>New Frustration</title>
+</head>
+<body>
+	<h1>Welcome to New Frustration<h1>
+		<h2>Website under maintenance.</h2>h2>
 
+</body>
+</html>
