--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Welcome to New Frustration<h1>
-		<h2>Website under maintenance.</h2>h2>
+		<h2>Website under maintenance.</h2>
 
 </body>
 </html>
