--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<title>New Frustration</title>
 </head>
 <body>
-	<h1>Welcome to New Frustration<h1>
-		<h2>Website under maintenance.</h2>
-
+	<h1>New Frustration<h1>
+		
 </body>
 </html>
