--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<section class="homepage">
 	
 	<div>
-	<a href="all-artists.html"><img src="nf-large.png"></a>
+	<img src="nf-large.png">
 	</div>
 	
 	</section>
