--- a/index.html
+++ b/index.html
@@ -1,22 +1,88 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<title>New Frustration</title>
+<!-- 
+    _   _________       __
+   / | / / ____/ |     / /
+  /  |/ / __/  | | /| / / 
+ / /|  / /___  | |/ |/ /  
+/_/ |_/_____/  |__/|__/   
+                          
+    __________  __  _________________  ___  ______________  _   __
+   / ____/ __ \/ / / / ___/_  __/ __ \/   |/_  __/  _/ __ \/ | / /
+  / /_  / /_/ / / / /\__ \ / / / /_/ / /| | / /  / // / / /  |/ / 
+ / __/ / _, _/ /_/ /___/ // / / _, _/ ___ |/ / _/ // /_/ / /|  /  
+/_/   /_/ |_|\____//____//_/ /_/ |_/_/  |_/_/ /___/\____/_/ |_/
+
+-->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>New Frustration</title>
+<link rel="icon" href="images/nf-fav.png">
+<style type="text/css">
+html, body{
+	/*background: #15DAF9;*/
+	background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif");
+}
+
+ .box{
+	/*background-color: #15DAF9;*/
+	margin: 0 auto;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+}
+
+.box b{
+	display: block;
+	width: 170px;
+	height: 188px;
+	background-image: url("images/nf-logo.png");
+	position: absolute;
+	-webkit-animation: moveX 10s linear 0s infinite alternate, moveY 6s linear 0s infinite alternate;
+	-moz-animation: moveX 10s linear 0s infinite alternate, moveY 6s linear 0s infinite alternate;
+	-o-animation: moveX 10s linear 0s infinite alternate, moveY 6s linear 0s infinite alternate;
+	animation: moveX 10s linear 0s infinite alternate, moveY 6s linear 0s infinite alternate;
+}
+
+@-webkit-keyframes moveX {
+  from { left: -10%; } to { left: 100%; }
+}
+@-moz-keyframes moveX {
+  from { left: -10%; } to { left: 100%; }
+}
+@-o-keyframes moveX {
+  from { left: -10%; } to { left: 100%; }
+}
+@keyframes moveX {
+  from { left: -10%; } to { left: 100%; }
+}
+
+@-webkit-keyframes moveY {
+  from { top: -20%; } to { top:  100%; }
+}
+@-moz-keyframes moveY {
+  from { top: -20%; } to { top:  100%; }
+}
+@-o-keyframes moveY {
+  from { top: -20%; } to { top:  100%; }
+}
+@keyframes moveY {
+  from { top: -20%; } to { top:  100%; }
+}
+</style>
 </head>
 <body>
-
-
-
-	<section class="homepage">
-	
-	<div>
-	<img src="nf-large.png">
-	</div>
-	
-	</section>
-
+<div class="box"><a href="artists.html"><b></b></a></div>
+<!--<section class="homepage">
+<div class="enter">
+<a href="home.html"><img src="images/smiley.png"></a>
+</div></section>-->
 </body>
 </html>
