--- a/shop.html
+++ b/shop.html
@@ -16,14 +16,18 @@
 		
 -->
 <style type="text/css">
+	
 	.item{
 		padding-bottom: 10px;
 		border: 4px solid black;
 		display: block;
+		padding-top: 50px;
+		width: 100%;
 	}
 
 	.item img{
 		border-bottom: 4px solid black;
+
 
 	}
 </style>
