--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,6 @@
 		padding-bottom: 10px;
 		border: 4px solid black;
 		display: block;
-		padding-top: 50px;
 		width: 100%;
 	}
 
@@ -29,6 +28,9 @@
 		border-bottom: 4px solid black;
 
 
+	}
+	head{
+		padding-bottom: 100px;
 	}
 </style>
 <meta charset="utf-8">
