--- a/artists/artist-page.html
+++ b/artists/artist-page.html
@@ -16,6 +16,17 @@
 
 
 -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133740794-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133740794-1');
+</script>
+
 <!-- Viewport Styling -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- CSS Style link -->
