--- a/projects/distracted.html
+++ b/projects/distracted.html
@@ -16,6 +16,16 @@
 /_/   /_/ |_|\____//____//_/ /_/ |_/_/  |_/_/ /___/\____/_/ |_/   
 
 -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133740794-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133740794-1');
+</script>
+
 <!-- Unique CSS Styling -->
 <style type="text/css">
 iframe{
