--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>New Frustration</title>
 <link rel="icon" href="images/nf-fav.png">
+<link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
 <style type="text/css">
 html, body{
 	/*background: #15DAF9;*/
@@ -50,14 +51,39 @@ html, body{
 
 .box b{
 	display: block;
-	width: 170px;
-	height: 188px;
-	background-image: url("images/nf-logo.png");
+	width: 168px;
+	height: 207px;
+	background-image: url("images/nf-logo-3.png");
 	position: absolute;
 	-webkit-animation: moveX 10s linear 0s infinite alternate, moveY 6s linear 0s infinite alternate;
 	-moz-animation: moveX 10s linear 0s infinite alternate, moveY 6s linear 0s infinite alternate;
 	-o-animation: moveX 10s linear 0s infinite alternate, moveY 6s linear 0s infinite alternate;
 	animation: moveX 10s linear 0s infinite alternate, moveY 6s linear 0s infinite alternate;
+}
+
+a{
+	font-family: "Lato";
+}
+
+a:link {
+  text-decoration: none;
+  color: white;
+}
+
+a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  text-decoration: none;
+  color: white;
+  
+}
+
+a:active{
+	text-decoration: none;
+	color: white;
 }
 
 @-webkit-keyframes moveX {
@@ -88,7 +114,8 @@ html, body{
 </style>
 </head>
 <body>
-<div class="box"><a href="artists.html"><b></b></a></div>
+<h1></h1>
+<div class="box"><a href="artists.html"><b></b></a><h1>Enter Site</h1></div>
 <!--<section class="homepage">
 <div class="enter">
 <a href="home.html"><img src="images/smiley.png"></a>
