--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ a:active{
 </head>
 <body>
 <h1></h1>
-<div class="box"><a href="artists.html"><b></b></a><h1>Enter Site</h1></div>
+<div class="box"><a href="artists.html"><b></b></a></div>
 <!--<section class="homepage">
 <div class="enter">
 <a href="home.html"><img src="images/smiley.png"></a>
