--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ html{
 	align-self: center;	
 }
 </style>
-<title>Contact | New Frustration</title>
+<title>About | New Frustration</title>
 </head>
 <body>
 <!-- Top bar -->
@@ -65,9 +65,23 @@ html{
 	</nav>
 </header>
 <div class="form">
-	<h1>Contact</h1>
-    
-	<h2>Email us at: <a href="emailto:emailnewfrustration@gmail.com"><u>emailnewfrustration@gmail.com</u></a></h2>
+	<h2>New Frustration is a publishing company dedicated to furthering the work of a select group of visionary young artists.</h2>
+
+
+
+  <h3>Follow Us! 
+  <br>
+
+<a target="_blank" href="https://www.facebook.com/New-Frustration-273942469966893/"><u>Facebook</u></a><br>
+<a target="_blank" href="https://soundcloud.com/user-303094234"><u>Soundcloud</u></a><br>
+<a target="_blank" href="https://newfrustration.tumblr.com/"><u>Tumblr</u></a><br>
+<a target="_blank" href="https://twitter.com/NFrustration"><u>Twitter</u></a><br>
+<a target="_blank" href="https://instagram.com/newfrustration"><u>Instagram</u></a><br>
+<a target="_blank" href="https://vimeo.com/newfrustration"><u>Vimeo</u></a><br>
+<a target="_blank" href="https://www.youtube.com/channel/UCCtUMoFcs1JDRMTY97BhOfg"><u>YouTube</u></a>
+
+</h3>
+
 
 <!-- 	<form>
 		<input type="text" name="name" placeholder="Name" style="width: 200px"><br />
