--- a/projects.html
+++ b/projects.html
@@ -87,8 +87,9 @@
 
 <!-- Contact Link and Copyright -->
 <footer>
-<p><a href="contact.html"><u>Contact</u></a></p>
-<p><strong>© New Frustration 2019</strong></p>
+  <p><a href="about.html">About</a> | 
+  <a href="contact.html">Contact</a></p>
+  <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
