--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,9 @@
 
 <style type="text/css">
 	
-
+	html{
+		overflow-y: scroll;
+	}
 	.item{
 		padding-bottom: 10px;
 		border: 4px solid black;
@@ -37,7 +39,7 @@
 	.item img{
 		border-bottom: 4px solid black;
 		width: 100%;
-
+		clear: both;
 	}
 
 </style>
@@ -71,14 +73,12 @@
 <div class="item"><a href="https://www.etsy.com/listing/679336109/new-frustration-smiley-series-t-shirt?ref=shop_home_feat_1"><img src="images/shop/item1.jpg"><br><b>SMILEY Series T-Shirt</b><br> $10</a></div>
 
 </div>
+
 <footer class="footer">
-	<p><a href="contact.html"><u>Contact</u></a></p>
-	<p><strong>© New Frustration 2019</strong></p>
-</footer>	
-<!-- Contact Link and Copyright -->
-<!-- <footer>
-<p><a class="contact" href="contact.html"><u>Contact Us</u></a></p>
-<p><strong>© New Frustration 2019. All Rights Reserved.</strong></p>
-</footer> -->
+  <p><a href="about.html">About</a> | 
+  <a href="contact.html">Contact</a></p>
+  <p><strong> © New Frustration 2019</strong></p>
+</footer>
+
 </body>
 </html>
