--- a/artists.html
+++ b/artists.html
@@ -144,9 +144,10 @@
 </div> -->
 
 <!-- Contact Link and Copyright -->
-<footer >
-  <p><a href="contact.html"><u>Contact</u></a></p>
-  <p><strong>© New Frustration 2019</strong></p>
+<footer>
+  <p><a href="about.html">About</a> | 
+  <a href="contact.html">Contact</a></p>
+  <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
