--- a/artists/MASINO.html
+++ b/artists/MASINO.html
@@ -26,6 +26,11 @@
 
   gtag('config', 'UA-133740794-1');
 </script>
+<style type="text/css">
+  html{
+    overflow-y: scroll;
+  }
+</style>
 
 <!-- Viewport Styling -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -72,8 +77,9 @@
 
 <!-- Contact and Copyright -->
 <footer>
-<p><a href="../contact.html"><u>Contact</u></a></p>
-<p><strong>© New Frustration 2019</strong></p>
+  <p><a href="about.html">About</a> | 
+  <a href="contact.html">Contact</a></p>
+  <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
