--- a/artists/cameron-louie.html
+++ b/artists/cameron-louie.html
@@ -28,7 +28,9 @@
 </script>
 
 <style type="text/css">
-
+.portfolio{
+	padding-bottom: 5px;
+}
 .portfolio img{
 	max-width: 1000px;
 	width: 100%;
@@ -36,6 +38,7 @@
 	margin: 0 auto 0 auto;
 	border: 4px solid black;
 	margin-top: 4px;
+
 
 }
 
@@ -108,8 +111,9 @@ iframe{
 </div>
 <!-- Contact and Copyright -->
 <footer>
-<p><a href="../contact.html"><u>Contact</u></a></p>
-<p><strong>© New Frustration 2019</strong></p>
+  <p><a href="about.html">About</a> | 
+  <a href="contact.html">Contact</a></p>
+  <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
