--- a/artists/gabriela-quinonez-riegos.html
+++ b/artists/gabriela-quinonez-riegos.html
@@ -26,7 +26,11 @@
 
   gtag('config', 'UA-133740794-1');
 </script>
-
+<style type="text/css">
+  html{
+    overflow-y: scroll;
+  }
+</style>
 <!-- Viewport Styling -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,8 +84,9 @@ This is a unique gift to say the least. Born into the generation that normalized
 
 <!-- Contact and Copyright -->
 <footer>
-<p><a href="../contact.html"><u>Contact</u></a></p>
-<p><strong>© New Frustration 2019</strong></p>
+  <p><a href="about.html">About</a> | 
+  <a href="contact.html">Contact</a></p>
+  <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
