--- a/projects/project-page.html
+++ b/projects/project-page.html
@@ -102,8 +102,9 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </audio>
 <!-- Contact and copyright -->
 <footer>
-<p><a href="../contact.html"><u>Contact</u></a></p>
-<p><strong>© New Frustration 2019</strong></p>
+  <p><a href="about.html">About</a> | 
+  <a href="contact.html">Contact</a></p>
+  <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
