--- a/projects/the-livers.html
+++ b/projects/the-livers.html
@@ -61,9 +61,10 @@
 	</div>
 <!-- Video and audio -->
 <!-- Contact and copyright -->
-<footer class="footer">
-<p><a href="../contact.html"><u>Contact</u></a></p>
-<p><strong>© New Frustration 2019</strong></p>
+<footer>
+  <p><a href="about.html">About</a> | 
+  <a href="contact.html">Contact</a></p>
+  <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
