--- a/artists/gabriela-quinonez-riegos.html
+++ b/artists/gabriela-quinonez-riegos.html
@@ -84,8 +84,8 @@ This is a unique gift to say the least. Born into the generation that normalized
 
 <!-- Contact and Copyright -->
 <footer>
-  <p><a href="about.html">About</a> | 
-  <a href="contact.html">Contact</a></p>
+  <p><a href="../about.html">About</a> | 
+  <a href="../contact.html">Contact</a></p>
   <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
