--- a/artists/artist-page.html
+++ b/artists/artist-page.html
@@ -115,8 +115,8 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 <!-- Contact and Copyright -->
 <footer>
-  <p><a href="about.html">About</a> | 
-  <a href="contact.html">Contact</a></p>
+  <p><a href="../about.html">About</a> | 
+  <a href="../contact.html">Contact</a></p>
   <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
