--- a/artists/cameron-louie.html
+++ b/artists/cameron-louie.html
@@ -111,8 +111,8 @@ iframe{
 </div>
 <!-- Contact and Copyright -->
 <footer>
-  <p><a href="about.html">About</a> | 
-  <a href="contact.html">Contact</a></p>
+  <p><a href="../about.html">About</a> | 
+  <a href="../contact.html">Contact</a></p>
   <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
