--- a/artists/rachel-saxby.html
+++ b/artists/rachel-saxby.html
@@ -79,8 +79,8 @@
 
 <!-- Contact and Copyright -->
 <footer>
-  <p><a href="about.html">About</a> | 
-  <a href="contact.html">Contact</a></p>
+  <p><a href="../about.html">About</a> | 
+  <a href="../contact.html">Contact</a></p>
   <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
