--- a/projects/distracted.html
+++ b/projects/distracted.html
@@ -69,8 +69,8 @@ iframe{
 </div>
 
 <footer>
-  <p><a href="about.html">About</a> | 
-  <a href="contact.html">Contact</a></p>
+  <p><a href="../about.html">About</a> | 
+  <a href="../contact.html">Contact</a></p>
   <p><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
