--- a/contact.html
+++ b/contact.html
@@ -77,9 +77,10 @@ html{
 	</form> -->
 </div>
 <footer>
-  <p><a href="about.html">About</a> | 
-  <a href="contact.html">Contact</a></p>
-  <p><strong> © New Frustration 2019</strong></p>
+  <p> <a href="about.html">About</a> | 
+  <a href="contact.html"><span style="text-decoration: underline;">Contact</span></a></p> <a style="align-self: center;" href="haha.html"><img width="20px" height="20px" src="images/nf-fav.png"></a>
+  
+  <p></a><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
