--- a/artists/rachel-saxby.html
+++ b/artists/rachel-saxby.html
@@ -79,9 +79,10 @@
 
 <!-- Contact and Copyright -->
 <footer>
-  <p><a href="../about.html">About</a> | 
-  <a href="../contact.html">Contact</a></p>
-  <p><strong> © New Frustration 2019</strong></p>
+  <p> <a href="../about.html">About</a> | 
+  <a href="../contact.html">Contact</a></p> <a style="align-self: center;" href="../haha.html"><img width="20px" height="20px" src="../images/nf-fav.png"></a>
+  
+  <p></a><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
