--- a/projects/project-page.html
+++ b/projects/project-page.html
@@ -102,9 +102,10 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </audio>
 <!-- Contact and copyright -->
 <footer>
-  <p><a href="../about.html">About</a> | 
-  <a href="../contact.html">Contact</a></p>
-  <p><strong> © New Frustration 2019</strong></p>
+  <p> <a href="../about.html">About</a> | 
+  <a href="../contact.html">Contact</a></p> <a style="align-self: center;" href="../haha.html"><img width="20px" height="20px" src="../images/nf-fav.png"></a>
+  
+  <p></a><strong> © New Frustration 2019</strong></p>
 </footer>
 </body>
 </html>
