--- a/shop.html
+++ b/shop.html
@@ -74,7 +74,7 @@
 
 </div>
 
-<footer>
+<footer class="footer">
   <p> <a href="about.html">About</a> | 
   <a href="contact.html">Contact</a></p> <a style="align-self: center;" href="haha.html"><img width="20px" height="20px" src="images/nf-fav.png"></a>
   
