--- a/artists.html
+++ b/artists.html
@@ -75,6 +75,15 @@
   </div>
 </div>
 
+ <div class="responsive">
+  <div class="gallery">
+    <a href="artists/kelli-schmalenbach.html">
+      <img class ="image" src="images/ph.png" alt="placeholder" width=auto height=auto>  
+      <div class="overlay"><div class="text">Kelli <br>Schmalenbach</div></div>
+    </a>
+  </div>
+</div>
+
 <!-- The Livers -->
 <div class="responsive">
   <div class="gallery">
