--- a/artists.html
+++ b/artists.html
@@ -75,10 +75,11 @@
   </div>
 </div>
 
+<!-- Kelli -->
  <div class="responsive">
   <div class="gallery">
     <a href="artists/kelli-schmalenbach.html">
-      <img class ="image" src="images/ph.png" alt="placeholder" width=auto height=auto>  
+      <img class ="image" src="images/kelli.png" alt="placeholder" width=auto height=auto>  
       <div class="overlay"><div class="text">Kelli <br>Schmalenbach</div></div>
     </a>
   </div>
