--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,18 @@
 </header>
 <!-- Artist Gallery -->
 
+<!-- Out To Play -->
+<div class="responsive">
+  <div class="gallery">
+    <a href="projects/out-to-play.html">
+    <img class ="image" src="images/out-to-play.png" alt="placeholder" width=auto height=auto>
+    <div class="overlay"><div class="text">Out To Play</div></div>
+    </a>
+    
+  </div>
+</div>
+
+<!-- distracted -->
 <div class="responsive">
   <div class="gallery">
     <a href="projects/distracted.html">
@@ -73,6 +85,8 @@
     </a>
   </div>
 </div>
+
+
 <!-- Placeholder -->
 
 <!-- <div class="responsive">
