--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@ html{
 <div class="form">
 	<h1>Contact</h1>
     
-	<h2>Email us at: <a href="emailto:emailnewfrustration@gmail.com"><u>emailnewfrustration@gmail.com</u></a></h2>
+	<h2>Email us at: <a href="mailto:emailnewfrustration@gmail.com"><u>emailnewfrustration@gmail.com</u></a></h2>
 
 <!-- 	<form>
 		<input type="text" name="name" placeholder="Name" style="width: 200px"><br />
