--- a/about.html
+++ b/about.html
@@ -65,11 +65,13 @@ html{
 	</nav>
 </header>
 <div class="form">
-	<h2>New Frustration is a publishing company dedicated to furthering the work of a select group of visionary young artists.</h2>
+	<h2>New Frustration is a publishing company dedicated to furthering the work of a select group of visionary young artists.<br><br>
+  Our diverse roster features artists from across the globe, challenging conventions and collaborating through the mediums of paint, photography, film, animation, fashion, design, and music.<br><br>
+  We publish, distribute, and promote our projects through the channels linked below. Subscribe to stay up to date on our releases.</h2>
 
 
 
-  <h3>Follow Us! 
+  <h3>
   <br>
 
 <a target="_blank" href="https://www.facebook.com/New-Frustration-273942469966893/"><u>Facebook</u></a><br>
