--- a/artists/rachel-saxby.html
+++ b/artists/rachel-saxby.html
@@ -77,6 +77,8 @@
 <p>Saxby’s true genius lies in the rhythm of her work. Her videos make it hard not to feel that you’re swinging, skating, trudging, or gazing alongside her. Her stills give glimpses into the lived rhythms of her subjects, and the hallowed pauses that give meaning to the motions to follow.
 </p>
 
+<iframe src="https://www.youtube.com/embed/stxVr6-fYHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+
 <!-- Contact and Copyright -->
 <footer>
   <p> <a href="../about.html">About</a> | 
