--- a/projects/out-to-play.html
+++ b/projects/out-to-play.html
@@ -70,11 +70,11 @@
 <!-- Title -->
 
 <!-- Description -->
-<h1 style="text-align: center;">Happy Valentine's Day!!!!</h1>
+<!-- <h1 style="text-align: center;">Happy Valentine's Day!!!!</h1> -->
 
 <!-- Video and audio -->
 <div class="iframe-container">
-<iframe src="https://www.youtube.com/embed/aQuHx67Hf5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+<iframe src="https://www.youtube.com/embed/stxVr6-fYHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
 
 <!-- Contact and copyright -->
 <footer>
