--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,16 @@
 </header>
 <!-- Artist Gallery -->
 
+<div class="responsive">
+  <div class="gallery">
+    <a href="projects/recorded-thoughts.html">
+    <img class ="image" src="images/recorded-thoughts-2.png" alt="recorded thoughts by masino" width=auto height=auto>
+    <div class="overlay"><div class="text">Recorded Thoughts</div></div>
+    </a>
+    
+  </div>
+</div> 
+
 <!-- Out To Play -->
 <div class="responsive">
   <div class="gallery">
