--- a/projects/recorded-thoughts.html
+++ b/projects/recorded-thoughts.html
@@ -61,8 +61,8 @@
 	</div>
 	<!-- Navigation Links -->
 	<nav class="navigation-bar">
-		<a class="nav-links" href="../artists/index.html" >Artists</a>
-		<a class="nav-links" href="../projects/index.html" style="color: white; text-shadow: 5px 5px 5px black;">Projects</a>
+		<a class="nav-links" href="../artists.html" >Artists</a>
+		<a class="nav-links" href="../projects.html" style="color: white; text-shadow: 5px 5px 5px black;">Projects</a>
 		<a class="nav-links" href="../shop.html">Shop</a>
 		<!-- <a class="nav-links" href="contact.html">Contact</a> -->
 	</nav>
