--- a/projects/recorded-thoughts.html
+++ b/projects/recorded-thoughts.html
@@ -40,6 +40,9 @@
 	float: left;
 	margin: 5px;
 }
+img{
+	max-width: 100%;
+}
 </style>
 <meta charset="utf-8">
 <!-- Viewport scaling -->
@@ -72,18 +75,17 @@
 <p>New Frustration is proud to present MASINO’s debut project, “Recorded Thoughts.” While holding true to his earlier soul-based work, it finds MASINO stretching out into less familiar territory. More diverse samples, non-traditional song structures, and live instrumentation give way to a display of power that showcases the versatility of the producer while defining his sound and paying homage to early influences such as MF DOOM, 9th wonder, and J Dilla.</p>
 
 <!-- <img src=""> -->
-<a target="_blank" href="http://www.datpiff.com/player/m9a44cda">Stream</a><br>
-<a target="_blank" href="http://www.datpiff.com/pop-mixtape-download.php?id=m9a44cda">Download</a><br>
-<img style="border: 5px solid black" width=500 height=500 src="../images/recorded-thoughts.png"><br>
-
-
+<a target="_blank" href="http://www.datpiff.com/player/m9a44cda"><button>Stream</button></a>
+<a target="_blank" href="http://www.datpiff.com/pop-mixtape-download.php?id=m9a44cda"><button>Download</button></a><br><br>
+<img style="border: 5px solid black" src="../images/recorded-thoughts.png"><br><br>
+<div class="iframe-container"><iframe src="https://www.youtube.com/embed/JAV-Nfi8HEo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/719649279&color=%2315daf9&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><br>
 
 <!-- Video and audio -->
 
-
 <footer>
   <p> <a href="../about.html">About</a> | 
-  <a href="../contact.html">Contact</a></p> <a style="align-self: center;" href="../haha.html"><img width="20px" height="20px" src="../images/nf-fav.png"></a>
+  <a href="../contact.html">Contact</a></p> <a style="align-self: center;" href="../haha.html"><img width="20px" height="20px" src="../images/nf-fav.png"></a><br>
   
   <p></a><strong> © New Frustration 2019</strong></p>
 </footer>
