--- a/projects/recorded-thoughts.html
+++ b/projects/recorded-thoughts.html
@@ -53,7 +53,7 @@ img{
 <link rel="icon" href="../images/nf-fav.png">
 <!-- Lato Font -->
 <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-<title>Project Page</title>
+<title>Recorded Thoughts | MASINO</title>
 </head>
 <body>
 <!-- Top Bar -->
