--- a/shop.html
+++ b/shop.html
@@ -70,7 +70,7 @@
 </header>
 <div class="body">
 
-<div class="item"><a href="https://www.etsy.com/listing/679336109/new-frustration-smiley-series-t-shirt?ref=shop_home_feat_1"><img src="images/shop/item1.jpg"><br><b>SMILEY Series T-Shirt</b><br> $10</a></div>
+<div class="item"><a href=""><img src="images/shop/item1.jpg"><br><b>MIXED BAG Series T-Shirt</b><br> $10</a></div>
 
 </div>
 
